[tool.poetry]
name = "cdv"
version = "0.1.0"
description = "Provides various dev tools for Chia"
authors = ["wallentx <william.allentx@gmail.com>"]
readme = "README.md"
packages = [{include = "cdv"}]

[tool.poetry.dependencies]
python = "^3.11"
chia-blockchain = {path = "../.."}
pytest = "^7.2.1"
packaging = "^23.0"
pytest-asyncio = "^0.20.3"
pytimeparse = "^1.1.8"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^0.991"
types-aiofiles = "^22.1.0.6"
types-click = "^7.1.8"
types-cryptography = "^3.3.23.2"
types-pkg-resources = "^0.1.3"
types-PyYAML = "^6.0.12.3"
types-setuptools = "^65.7.0.3"
black = "^22.10"
isort = "^5.11.4"
pre-commit = "^3.0.0"
pylint = "^2.15.10"

[build-system]
requires = [
    "setuptools>=42",
    "setuptools_scm[toml]>=4.1.2",
    "wheel",
    "poetry-core"
]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cdv = "cdv.cmds.cli:main"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

# vertical hanging indent mode also used in black configuration
multi_line_output = 3

# necessary because black expect the trailing comma
include_trailing_comma = true

# black compatibility
force_grid_wrap = 0

# black compatibility
use_parentheses = true

# black compatibility
ensure_newline_before_comments = true

# we chose 120 as line length
line_length = 120
